[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Zombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.794403, 0, 0, 0, 0, 0, 2592.79, 0, 0, 0, 0, 0, 2592.79, 2560, 0, 0, 0, 0, 0.794403, 2560, 0, 0, 0, 0, 0.794403, 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 1312 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1312, 32 )

[node name="World" type="Node2D"]
position = Vector2( -0.794403, 0 )
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1280.79, 1280 )

[node name="Obstacle" parent="." instance=ExtResource( 4 )]
position = Vector2( 32.7944, 32 )

[node name="Obstacle2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1024.79, 608 )

[node name="Obstacle4" parent="." instance=ExtResource( 4 )]
position = Vector2( 768.794, 1440 )

[node name="Obstacle5" parent="." instance=ExtResource( 4 )]
position = Vector2( 2528.79, 32 )

[node name="Obstacle3" parent="." instance=ExtResource( 4 )]
position = Vector2( 32.7944, 1472 )

[node name="Obstacle6" parent="." instance=ExtResource( 4 )]
position = Vector2( 32.7944, 2528 )

[node name="Obstacle7" parent="." instance=ExtResource( 4 )]
position = Vector2( 2528.79, 2528 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 0.00980741, 0 )
scale = Vector2( 0.987654, 1 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.794403, 0 )

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="LeftWall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -31.2056, 1280 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 2592.79, 1287.26 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1280.79, 2592 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 3 )

[node name="TopWall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1280.79, -32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 3 )
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]
